<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_family_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_family_name" />

        <RadioGroup
            android:id="@+id/add_family_gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/add_family_gender_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/add_family_male" />

            <RadioButton
                android:id="@+id/add_family_gender_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_family_female" />
        </RadioGroup>

        <EditText
            android:id="@+id/add_family_age_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_family_age"
            android:inputType="number" />

        <EditText
            android:id="@+id/add_family_weight_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_family_weight"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/famliy_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/add_family_heightft_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/add_family_heightft"
                android:inputType="number" />

            <EditText
                android:id="@+id/add_family_heightin_edittext"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/add_family_heightin"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_family_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_red"
        android:text="@string/okay"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>