<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <ImageButton
                android:id="@+id/diagnosis_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="80"
                android:background="@android:color/transparent"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/diagnosis" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center_horizontal"
                android:text="@string/diagnosis"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <ImageButton
                android:id="@+id/emergency_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="80"
                android:background="@android:color/transparent"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/emergency" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center_horizontal"
                android:text="@string/emergency"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <ImageButton
                android:id="@+id/nearby_hospital_and_stores_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="80"
                android:background="@android:color/transparent"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/nearby_hospital" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center_horizontal"
                android:text="@string/nearby_hospital_and_medical_stores"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="80"
                android:background="@android:color/transparent"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/family_members" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center_horizontal"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>